--- a/sonarqube/sonarqube-service.yaml
+++ b/sonarqube/sonarqube-service.yaml
@@ -2,13 +2,15 @@
 apiVersion: v1
 kind: Service
 metadata:
+  labels:
+    app: sonarqube
   name: sonarqube
 spec:
   ports:
-  - name: sonarqube
-    port: 9000
-    protocol: TCP
+    - name: sonar
+      port: 80
+      protocol: TCP
+      targetPort: 9000
   selector:
     app: sonarqube
-  type: ClusterIP
-# type: LoadBalancer
+  type: LoadBalancer
