--- a/postgres/postgres-secret.yaml
+++ b/postgres/postgres-secret.yaml
@@ -3,7 +3,6 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: postgres
-  namespace: sonarqube
 type: Opaque
 data:
-  password: c2VjdXJlcG9zdGdyZXNwYXNzd29yZA==
+  password: cGFzc3dvcmQ=
