--- a/sonarqube/sonarqube-deployment.yaml
+++ b/sonarqube/sonarqube-deployment.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     app: sonarqube
   name: sonarqube
+  namespace: sonarqube
 spec:
   replicas: 1
   selector:
@@ -17,12 +18,14 @@ spec:
     spec:
       containers:
         - name: sonarqube
-          image: sonarqube:8.4.2-community
+          args:
+            - -Dsonar.web.context=/sonar
+          image: sonarqube:7.1
           env:
           - name: "SONARQUBE_JDBC_USERNAME"
-            value: "psqladmin@psqlcicd-db"
+            value: "sonaruser@sonardb"
           - name: "SONARQUBE_JDBC_URL"
-            value: "jdbc:postgresql://psqlcicd-db.postgres.database.azure.com/sonar"
+            value: "jdbc:postgresql://postgres-db-service:5432/sonardb"
           - name: "SONARQUBE_JDBC_PASSWORD"
             valueFrom:
               secretKeyRef:
@@ -43,13 +46,6 @@ spec:
           ports:
           - containerPort: 9000
             protocol: TCP
-      initContainers:
-        - name: sysctl
-          image: busybox
-          imagePullPolicy: IfNotPresent
-          command: ['sysctl', '-w', 'vm.max_map_count=262144']
-          securityContext:
-            privileged: true
       volumes:
       - name: sonar-data
         persistentVolumeClaim:
