--- a/nginx/nginx-deployment.yaml
+++ b/nginx/nginx-deployment.yaml
@@ -1,13 +1,20 @@
 ---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: nginx
+
+---
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
   name: nginx-deployment
+  namespace: nginx
 spec:
   selector:
     matchLabels:
       app: nginx
-  replicas: 1 # tells deployment to run 2 pods matching the template
+  replicas: 1 
   template:
     metadata:
       labels:
@@ -15,7 +22,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:1.14.2  #[1.14.2 to 1.16.1]
+        image: nginx:1.17.9  #[1.14.2, 1.16.1, 1.17.9]
         ports:
         - containerPort: 80
 
@@ -24,6 +31,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nginx-service
+  namespace: nginx
   labels:
     app: nginx
 spec:
@@ -32,4 +40,4 @@ spec:
     protocol: TCP
   selector:
     app: nginx
-  type: LoadBalancer
+#  type: LoadBalancer
