--- a/elastic-stack/templates/elastic-sts.yaml
+++ b/elastic-stack/templates/elastic-sts.yaml
@@ -68,9 +68,9 @@ spec:
               fieldRef:
                 fieldPath: metadata.name
           - name: discovery.seed_hosts
-            value: "elasticsearch-0.es.default.svc.cluster.local,elasticsearch-1.es.default.svc.cluster.local,elasticsearch-2.es.default.svc.cluster.local"
+            value: "elasticsearch-0.es.{{ .Values.namespace }}-{{ .Values.environment }}-ns.svc.cluster.local,elasticsearch-1.es.{{ .Values.namespace }}-{{ .Values.environment }}-ns.svc.cluster.local,elasticsearch-2.es.{{ .Values.namespace }}-{{ .Values.environment }}-ns.svc.cluster.local"
           - name: cluster.initial_master_nodes
-            value: "elasticsearch-0.es.default.svc.cluster.local"
+            value: "elasticsearch-0.es.{{ .Values.namespace }}-{{ .Values.environment }}-ns.svc.cluster.local"
           - name: ES_JAVA_OPTS
             value: -Xms1g -Xmx1g
         volumeMounts:
