--- a/elastic-stack/templates/elastic-svc.yaml
+++ b/elastic-stack/templates/elastic-svc.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
      app: {{ .Values.appname }}
 spec:
-  clusterIP: None
+  clusterIP: NodePort
   selector:
     app: {{ .Values.appname }}
   ports:
