update service label

--- a/elastic-stack/templates/elastic-svc.yaml
+++ b/elastic-stack/templates/elastic-svc.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   clusterIP: None
   selector:
-    app: {{ .Values.appname }}
+    service: {{ .Values.appname }}
   ports:
   - name: serving
     port: 9200
