--- a/elastic-stack/templates/elastic-sts.yaml
+++ b/elastic-stack/templates/elastic-sts.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: {{ .Values.appname }}
-  namespace: {{ .Values.namespace }}-{{ .Values.environment }}-ns
+  namespace: {{ .Values.namespace }}-ns
   labels:
     service: elasticsearch
 spec:
@@ -68,11 +68,9 @@ spec:
               fieldRef:
                 fieldPath: metadata.name
           - name: discovery.seed_hosts
-            value: "elasticsearch-0.es.{{ .Values.namespace }}-{{ .Values.environment }}-ns.svc.cluster.local,elasticsearch-1.es.{{ .Values.namespace }}-{{ .Values.environment }}-ns.svc.cluster.local,elasticsearch-2.es.{{ .Values.namespace }}-{{ .Values.environment }}-ns.svc.cluster.local"
+            value: "elasticsearch-0.es.{{ .Values.namespace }}-ns.svc.cluster.local,elasticsearch-1.es.{{ .Values.namespace }}-ns.svc.cluster.local,elasticsearch-2.es.{{ .Values.namespace }}-ns.svc.cluster.local"
           - name: cluster.initial_master_nodes
-            valueFrom:
-              fieldRef:
-                fieldPath: metadata.name
+            value: "elasticsearch-0.es.{{ .Values.namespace }}-ns.svc.cluster.local,elasticsearch-1.es.{{ .Values.namespace }}-ns.svc.cluster.local,elasticsearch-2.es.{{ .Values.namespace }}-ns.svc.cluster.local"
           - name: ES_JAVA_OPTS
             value: "-Xms2g -Xmx2g"
           - name: network.host
