--- a/elastic-stack/templates/elastic-svc.yaml
+++ b/elastic-stack/templates/elastic-svc.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: es 
-  namespace: {{ .Values.namespace }}-{{ .Values.environment }}-ns
+  namespace: {{ .Values.namespace }}-ns
   labels:
      service: {{ .Values.appname }}
 spec:
