--- a/elastic-stack/templates/elastic-sts.yaml
+++ b/elastic-stack/templates/elastic-sts.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: {{ .Values.appname }}
-  namespace: {{ .Values.namespace }}-ns
+  namespace: {{ .Values.namespace }}
   labels:
     service: elasticsearch
 spec:
@@ -68,7 +68,9 @@ spec:
               fieldRef:
                 fieldPath: metadata.name
           - name: discovery.seed_hosts
-            value: "elasticsearch-0.es.{{ .Values.namespace }}-ns.svc.cluster.local,elasticsearch-1.es.{{ .Values.namespace }}-ns.svc.cluster.local,elasticsearch-2.es.{{ .Values.namespace }}-ns.svc.cluster.local"
+            value: "elasticsearch-0.{{ .Values.namespace }},elasticsearch-1.{{ .Values.namespace }},elasticsearch-2.{{ .Values.namespace }}"
+          - name: cluster.initial_master_nodes
+            value: "elasticsearch-0,elasticsearch-1,elasticsearch-2"
           - name: ES_JAVA_OPTS
             value: "-Xms2g -Xmx2g"
           - name: network.host
