--- a/elastic-stack/templates/elastic-sts.yaml
+++ b/elastic-stack/templates/elastic-sts.yaml
@@ -68,7 +68,7 @@ spec:
               fieldRef:
                 fieldPath: metadata.name
           - name: discovery.seed_hosts
-            value: "elasticsearch-0.{{ .Values.namespace }},elasticsearch-1.{{ .Values.namespace }},elasticsearch-2.{{ .Values.namespace }}"
+            value: "elasticsearch-0.es.{{ .Values.namespace }},elasticsearch-1.es.{{ .Values.namespace }},elasticsearch-2.es.{{ .Values.namespace }}"
           - name: cluster.initial_master_nodes
             value: "elasticsearch-0,elasticsearch-1,elasticsearch-2"
           - name: ES_JAVA_OPTS
