--- a/elastic-stack/templates/kibana-deployment.yaml
+++ b/elastic-stack/templates/kibana-deployment.yaml
@@ -23,16 +23,14 @@ spec:
         env:
         - name: cluster.name
           value: elasticsearch-cluster
-        - name: XPACK_SECURITY_ENABLED
-          value: 'false'
-        - name: XPACK_GRAPH_ENABLED
-          value: 'false'
-        - name: XPACK_ML_ENABLED
-          value: 'false'
-        - name: XPACK_REPORTING_ENABLED
-          value: 'false'
-        - name: ELASTICSEARCH_URL
-          value: 'http://elasticsearch-0.es.{{ .Values.namespace }}:9200'
+        - name: server.host
+          value: 0.0.0.0
+        - name: elasticsearch.hosts
+          value: 'http://127.0.0.1:9200'
+        - name: server.name
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.name
         resources:
           limits:
             cpu: 1000m
