--- a/elastic-stack/templates/kibana-deployment.yaml
+++ b/elastic-stack/templates/kibana-deployment.yaml
@@ -23,8 +23,18 @@ spec:
         env:
         - name: cluster.name
           value: {{ .Values.cluster_name }}
-        - name: elasticsearch.hosts
+        - name: ELASTICSEARCH_URL
           value: http://elasticsearch-0.es.{{ .Values.namespace }}:9200
+        - name: XPACK_MONITORING_ENABLED
+          value: "false"
+        - name: XPACK_SECURITY_ENABLED
+          value: "false"
+        - name: XPACK_REPORTING_ENABLED
+          value: "false"
+        - name: XPACK_ML_ENABLED
+          value: "false"   
+        - name: XPACK_GRAPH_ENABLED
+          value: "false"    
         resources:
           limits:
             cpu: 1000m
