--- a/elastic-stack/templates/kibana-deployment.yaml
+++ b/elastic-stack/templates/kibana-deployment.yaml
@@ -21,12 +21,8 @@ spec:
         image: "{{ .Values.kibana_image.repository }}:{{ .Values.kibana_image.tag }}"
         imagePullPolicy: {{ .Values.kibana_image.pullPolicy }}
         env:
-        - name: server.host
-          value: 0.0.0.0
-        - name: cluster.name
-          value: {{ .Values.cluster_name }}
-        - name: elasticsearch.hosts
-          value: http://es.elk-stack-ns.svc.cluster.local:9200
+        - name: ELASTICSEARCH_URL
+          value: http://elasticsearch:9200
           #value: http://elasticsearch-0.es.{{ .Values.namespace }}:9200
         resources:
           limits:
@@ -35,5 +31,3 @@ spec:
             cpu: 100m
         ports:
         - containerPort: 5601
-          name: {{ .Values.kibappname }}
-          protocol: TCP
